2008-06-16  Kenichi Handa  <handa@m17n.org>

	* font.c (font_check_object): Delete it.
	(font_clear_cache): Check if a font-object is alive.
	(font_open_entity): Likewise.  Set FONT_OBJLST_INDEX of a
	font-object to nil.
	(font_close_object): Don't check FONT_CLOSE_OBJECT.
	(font_at): Don't call font_check_object.

2008-06-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* puresize.h (BASE_PURESIZE): Increase to 1230000.

2008-06-16  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Correctly parse KEY=VAL values.

2008-06-15  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Only one decimal point.
	(font_unparse_fcname): Handle data in family and foundry indices
	as symbols, not strings.
	(font_unparse_gtkname, Ffont_face_attributes): New functions.

	* xfns.c (Fx_select_font): Give GTK font dialog the default font name.

	* font.h (font_unparse_gtkname): Add prototype.

2008-06-15  Naohiro Aota  <nao.aota@gmail.com>  (tiny change)

	* fontset.c (fontset_pattern_regexp): Escape `+' characters in pattern.

2008-06-15  Andreas Schwab  <schwab@suse.de>

	* font.c (font_update_drivers): Fix crash when no drivers match.

2008-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xfns.c (Fx_create_frame): internal-border-width default to 0 for Gtk.
	* gtkutil.c (xg_create_frame_widgets): Don't set internal_border_width.

2008-06-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (syms_of_xdisp): Default underline-minimum-offset to 1.

2008-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (Fserial_process_configure, Fprocess_send_eof):
	Use EQ to compare Lisp_Objects.

2008-06-13  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Fw32_select_font): Remove old font API function.

	* w32font.c (logfont_to_fcname): New function.
	(Fx_select_font): New font dialog function compatible with
	GTK/fontconfig version.

	* font.c (font_style_symbolic_from_value): New function.
	(font_style_symbolic): Use it.
