@@ -1,3 +1,13 @@
+2008-06-16  Jason Rumney  <jasonr@gnu.org>
+
+        * font.h (font_style_symbolic_from_value): Remove.
+
+        * font.c (font_style_symbolic_from_value): Remove.
+        (font_style_symbolic): Revert to pre 2008-06-13 version.
+
+        * w32font.c (w32_to_fc_weight): New function.
+        (w32font_full_name, logfont_to_fcname): Use it.
+
 2008-06-16  Kenichi Handa  <handa@m17n.org>
 
 	* font.c (font_check_object): Delete it.
